unpackaged/main/default/objects/ProgramApi__Program__c/ProgramApi__Program__c.object-meta.xml
<CustomObject>
    <description>This object is used for the creation and management of programs.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>