unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Active__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies program is active</description>
    <inlineHelpText>Identifies program is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>