unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Candidate_Term__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Candidate_Term__c</fullName>
    <description>Identifies the number of months that a candidate has to complete goals</description>
    <inlineHelpText>Identifies the number of months that a candidate has to complete goals</inlineHelpText>
    <label>Candidate Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>