unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Custom_Link_Label__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Custom_Link_Label__c</fullName>
    <defaultValue>&#39;Certificate&#39;</defaultValue>
    <description>This field defines the label to be presented to the end user when the custom link is presented.</description>
    <inlineHelpText>This field defines the label to be presented to the end user when the custom link is presented.</inlineHelpText>
    <label>Custom Link Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>