unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Designation__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Designation__c</fullName>
    <description>Optional designation or acronym to be earned</description>
    <inlineHelpText>Optional designation or acronym to be earned</inlineHelpText>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>