unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Entity__c</fullName>
    <description>Defines participant object (e.g. Contact, Account)</description>
    <inlineHelpText>Defines participant object (e.g. Contact, Account)</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>