unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Goal_Display_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Goal_Display_Field_Set__c</fullName>
    <description>Define the API name of the Program Goal&#39;s field set you wish to display in the goals table for program profiles related to this program.</description>
    <inlineHelpText>Define the API name of the Program Goal&#39;s field set you wish to display in the goals table for program profiles related to this program.</inlineHelpText>
    <label>Goal Display Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>