unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Maintenance_Term__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Maintenance_Term__c</fullName>
    <description>Identifies the number of months given to complete maintenance goals or to renew</description>
    <inlineHelpText>Identifies the number of months given to complete maintenance goals or to renew</inlineHelpText>
    <label>Maintenance Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>