unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Progam_Name__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Progam_Name__c</fullName>
    <description>Formal program name to display online or on reports (defaults to Name)</description>
    <inlineHelpText>Formal program name to display online or on reports (defaults to Name)</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>