unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Program_Type__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select program type</description>
    <inlineHelpText>Select program type</inlineHelpText>
    <label>Program Type</label>
    <referenceTo>ProgramApi__Program_Type__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>