unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Programs_Description__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Programs_Description__c</fullName>
    <description>Optional program description.</description>
    <inlineHelpText>Optional program description.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>