unpackaged/main/default/objects/ProgramApi__Program__c/fields/ProgramApi__Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Progress_Bar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, program progress bar on Program page for this program</description>
    <inlineHelpText>When checked, program progress bar on Program page for this program</inlineHelpText>
    <label>Progress Bar</label>
    <type>Checkbox</type>
</CustomField>