unpackaged/main/default/objects/ProgramApi__Program__c/validationRules/ProgramApi__Entity_Edit_Lockdown.validationRule-meta.xml
<ValidationRule>
    <fullName>ProgramApi__Entity_Edit_Lockdown</fullName>
    <active>true</active>
    <description>Cannot update Entity once it has been defined</description>
    <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED( ProgramApi__Entity__c )</errorConditionFormula>
    <errorDisplayField>ProgramApi__Entity__c</errorDisplayField>
    <errorMessage>Cannot update Entity once it has been defined</errorMessage>
</ValidationRule>