unpackaged/main/default/objects/ProgramApi__Program__c/listViews/ProgramApi__All.listView-meta.xml
<ListView>
    <fullName>ProgramApi__All</fullName>
    <columns>ProgramApi__Program_Type__c</columns>
    <columns>NAME</columns>
    <columns>ProgramApi__Progam_Name__c</columns>
    <columns>ProgramApi__Designation__c</columns>
    <columns>ProgramApi__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>